Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Mon Aug 27 2012 Thunor <thunorsif@hotmail.com>
- Updated the terminal widget: its variable now contains its pid.
- Updated examples/terminal/terminal to output the pid with the signals.
- Added support for clear to the terminal widget.
- Updated the terminal widget: argv0 now defaults to /bin/sh so a
  terminal widget could simply be <terminal></terminal>.
- Added examples/miscellaneous/grabfocus.

* Sun Aug 26 2012 Thunor <thunorsif@hotmail.com>
- Updated the terminal widget so that when the user types exit or it is
  killed, the terminal resets and the command is forked again. This will
  happen before the application receives the child-exited signal.

* Sat Aug 25 2012 Thunor <thunorsif@hotmail.com>
- Added support for grabfocus to compatible widgets.
- Added examples/terminal/terminal.
- Updated the wiki and the reference docs.

* Fri Aug 24 2012 Thunor <thunorsif@hotmail.com>
- New widget: <terminal> -- requires libvte but is not mandatory.

* Thu Aug 23 2012 Thunor <thunorsif@hotmail.com>
- Added examples/miscellaneous/conditional_widget_refreshing.
- Modified ST_TAG_ATTR in the lexer to accommodate "0-9".

* Tue Aug 21 2012 Thunor <thunorsif@hotmail.com>
- Added examples/c_embedded/example01 and Makefile by sklimkin.

* Mon Aug 20 2012 Thunor <thunorsif@hotmail.com>
- Added support for button horizontal image with label alignment: by
  default the alignment is centred but it can be optionally uniform.
- Added examples/button/button_image_horizontal_alignment.
- Added a default window title bar project icon gtkdialog.png.
- Windows will now default to using icon-name="gtkdialog".

* Sun Aug 19 2012 Thunor <thunorsif@hotmail.com>
- Added window tags to a substantial number of old examples because they
  really should be there despite the parser accepting them without and
  it'll stop newcomers experiencing problems writing apps that launch.
