@@ -25,7 +25,8 @@ export MAIN_DIALOG='
 		<text label="Default stock icon is gtk-apply"></text>
 		<tree stock-id="gtk-apply">
 			<variable>TREE1</variable>
-			<width>400</width><height>250</height>
+			<height>250</height>
+			<width>400</width>
 			<label>Device                        | Directory | File</label>
 			<item>Floppy Disk | /floppy/  | ak.tex</item>
 			<item>Floppy Disk | /floppy/  | ak.dvi</item>
@@ -38,7 +39,8 @@ export MAIN_DIALOG='
 		<text label="Default theme icon is gimp"></text>
 		<tree icon-name="gimp">
 			<variable>TREE2</variable>
-			<width>400</width><height>250</height>
+			<height>250</height>
+			<width>400</width>
 			<label>Device                        | Directory | File</label>
 			<item>Floppy Disk | /floppy/  | ak.tex</item>
 			<item>Floppy Disk | /floppy/  | ak.dvi</item>
